// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Render component StudyHandbook within Layout match to snapshot in English 1`] = `
<DocumentFragment>
  <div
    class="row"
  >
    <nav
      aria-label="Sub menu"
      class="col navbar navbar-expand-lg navbar-light"
      id="mainMenu"
    >
      <div
        class="collapse navbar-collapse"
        id="navbarNav"
      >
        <ul
          class="nav"
        >
          <li
            class="parentLink"
          >
            <a
              href="/student/?l=en"
            >
              Student at KTH
            </a>
          </li>
        </ul>
        <ul
          class="nav nav-list expandable"
        >
          <li
            class="nav-item ancestor"
          >
            <div>
              Course and programme directory
            </div>
          </li>
          <li
            class="nav-item leaf"
          >
            <a
              class="nav-link"
              href="/student/kurser/kurser-inom-program"
            >
              Programme Syllabuses
            </a>
          </li>
          <li
            class="nav-item leaf"
          >
            <a
              class="nav-link"
              href="/student/kurser/sokkurs"
            >
              Search courses
            </a>
          </li>
          <li
            class="nav-item leaf"
          >
            <a
              class="nav-link"
              href="/student/kurser/org"
            >
              Courses by school
            </a>
          </li>
          <li
            class="nav-item leaf selected"
          >
            <a
              class="nav-link"
              href="/student/program/shb"
            >
              Studies before 2007/2008
            </a>
          </li>
        </ul>
      </div>
    </nav>
    <div
      class="col"
    >
      <main
        id="mainContent"
      >
        <div
          class="row"
        >
          <div
            class="col"
          >
            <header
              role="presentation"
            >
              <h1>
                Studies before 2007/2008
              </h1>
            </header>
          </div>
        </div>
        <div
          class="row"
        >
          <div
            class="col"
          >
            <article
              class="article paragraphs"
            >
              <p>
                Until the academic year 2007/2008, information on programmes and courses was available in the study handbook. Study Handbook 00/01 to 07/08
              </p>
              <p>
                <a
                  href="https://intra.kth.se/utbildning/utbildningsadministr/kopps/shb"
                >
                  Study Handbook 00/01 to 07/08
                </a>
              </p>
            </article>
          </div>
        </div>
        <div
          class="row"
        >
          <div
            class="col"
          >
            <footer
              class="border-top mt-4 pt-1"
              id="articleFooter"
            >
              <address>
                Contact for questions regarding education at KTH: 
                <a
                  href="https://www.kth.se/en/studies/master/general-study-counselling-1.621634"
                >
                  Central study counseling
                </a>
                <br />
                Contact regarding technical matters on this page: 
                <a
                  href="mailto:kopps@kth.se"
                >
                  kopps@kth.se
                </a>
              </address>
            </footer>
          </div>
        </div>
      </main>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Render component StudyHandbook within Layout match to snapshot in Swedish 1`] = `
<DocumentFragment>
  <div
    class="row"
  >
    <nav
      aria-label="Undermeny"
      class="col navbar navbar-expand-lg navbar-light"
      id="mainMenu"
    >
      <div
        class="collapse navbar-collapse"
        id="navbarNav"
      >
        <ul
          class="nav"
        >
          <li
            class="parentLink"
          >
            <a
              href="/student/"
            >
              Student på KTH
            </a>
          </li>
        </ul>
        <ul
          class="nav nav-list expandable"
        >
          <li
            class="nav-item ancestor"
          >
            <div>
              Kurs- och programkatalogen
            </div>
          </li>
          <li
            class="nav-item leaf"
          >
            <a
              class="nav-link"
              href="/student/kurser/kurser-inom-program"
            >
              Utbildningsplaner
            </a>
          </li>
          <li
            class="nav-item leaf"
          >
            <a
              class="nav-link"
              href="/student/kurser/sokkurs"
            >
              Sök kurser
            </a>
          </li>
          <li
            class="nav-item leaf"
          >
            <a
              class="nav-link"
              href="/student/kurser/org"
            >
              Kurser per skola
            </a>
          </li>
          <li
            class="nav-item leaf selected"
          >
            <a
              class="nav-link"
              href="/student/program/shb"
            >
              Studier före 07/08
            </a>
          </li>
        </ul>
      </div>
    </nav>
    <div
      class="col"
    >
      <main
        id="mainContent"
      >
        <div
          class="row"
        >
          <div
            class="col"
          >
            <header
              role="presentation"
            >
              <h1>
                Studier före 07/08
              </h1>
            </header>
          </div>
        </div>
        <div
          class="row"
        >
          <div
            class="col"
          >
            <article
              class="article paragraphs"
            >
              <p>
                Fram till läsåret 2007/2008 fanns information om program och kurser i studiehandboken. Studiehandboken 00/01 tom 07/08
              </p>
              <p>
                <a
                  href="https://intra.kth.se/utbildning/utbildningsadministr/kopps/shb"
                >
                  Studiehandboken 00/01 tom 07/08
                </a>
              </p>
            </article>
          </div>
        </div>
        <div
          class="row"
        >
          <div
            class="col"
          >
            <footer
              class="border-top mt-4 pt-1"
              id="articleFooter"
            >
              <address>
                Kontakt för frågor om utbildning på KTH: 
                <a
                  href="https://www.kth.se/studievagledning"
                >
                  Central studievägledning
                </a>
                <br />
                Teknisk kontakt om denna sida: 
                <a
                  href="mailto:kopps@kth.se"
                >
                  kopps@kth.se
                </a>
              </address>
            </footer>
          </div>
        </div>
      </main>
    </div>
  </div>
</DocumentFragment>
`;
